--- a/quiz/step5/index.html
+++ b/quiz/step5/index.html
@@ -19,7 +19,7 @@
         <input type="radio" name="question1" value="d"/>
         <label>.css</label>
       </div>
-
+      <br>
       <div id="question2">
         <div class="question"> 자바스크립트 객체는 어떤 문자로 래핑되는가? </div>
         <input type="radio" name="question2" value="a"/>
@@ -31,7 +31,7 @@
         <input type="radio" name="question2" value="d"/>
         <label>()</label>
       </div>
-
+      <br>
       <div id="question3">
         <div class="question"> 다음 중 두더지에 대한 설명으로 적합한 단어는? </div>
         <input type="radio" name="question3" value="a"/>
@@ -43,7 +43,7 @@
         <input type="radio" name="question3" value="d"/>
         <label>상기 보기가 모두 해당</label>
       </div>
-
+      <br>
       <div id="question4">
         <div class="question"> 일본어 "か"의 발음은? </div>
         <input type="radio" name="question4" value="a"/>
@@ -55,7 +55,7 @@
         <input type="radio" name="question4" value="d"/>
         <label>ki</label>
       </div>
-
+      <br>
       <div id="question5">
         <div class="question"> 다음중 지구의 중력 수치를 구하는 공식은? </div>
         <input type="radio" name="question5" value="a"/>
@@ -67,7 +67,7 @@
         <input type="radio" name="question5" value="d"/>
         <label>84.4m/s^2</label>
       </div>
-
+      <br>
       <div id="question6">
         <div class="question"> 십진수 45를 이진수로 바꾸면 얼마일까? </div>
         <input type="radio" name="question6" value="a"/>
@@ -79,7 +79,7 @@
         <input type="radio" name="question6" value="d"/>
         <label>101011</label>
       </div>
-
+      <br>
       <div id="question7">
         <div class="question"> 4 << 2=? </div>
         <input type="radio" name="question7" value="a"/>
@@ -91,7 +91,7 @@
         <input type="radio" name="question7" value="d"/>
         <label>8</label>
       </div>
-
+      <br>
       <div id="question8">
         <div class="question"> 직각 삼각형의 두 변의 길이를 알 때 빗변의 길이를 구하는 방법은? </div>
         <input type="radio" name="question8" value="a"/>
@@ -103,32 +103,29 @@
         <input type="radio" name="question8" value="d"/>
         <label>Sin(side1 + side2)</label>
       </div>
-
+      <br>
       <div id="question9">
         <div class="question"> 참 혹은 거짓: 모든 게임은 최소한 초당 66 프레임으로 실행되어야 한다. </div>
         <input type="radio" name="question9" value="a"/>
-        <label>.html</label>
+        <label>참</label>
         <input type="radio" name="question9" value="b"/>
-        <label>.exe</label>
-        <input type="radio" name="question9" value="c"/>
-        <label>.js</label>
-        <input type="radio" name="question9" value="d"/>
-        <label>.css</label>
+        <label>거짖</label>
       </div>
-
+      <br>
       <div id="question10">
         <div class="question"> 서버를 사용하면 얻을 수 있는 장점은 ? </div>
         <input type="radio" name="question10" value="a"/>
-        <label>.html</label>
+        <label>코드를 감출 수 있다.</label>
         <input type="radio" name="question10" value="b"/>
-        <label>.exe</label>
+        <label>적절한 성능의 게임을 구현할 수  있다.</label>
         <input type="radio" name="question10" value="c"/>
-        <label>.js</label>
+        <label>사용자들이 경험을 공유할 수  있다.</label>
         <input type="radio" name="question10" value="d"/>
-        <label>.css</label>
+        <label>상기 보기가 모 해당</label>
       </div>
 
     </div>
+
     <script src="jquery.js"></script>
     <script src="impress.js"></script>
     <!-- atom needs this to run -->
