--- a/quiz/step6/index.html
+++ b/quiz/step6/index.html
@@ -5,7 +5,7 @@
     <title>퀴즈</title>
     <link rel="stylesheet" type="text/css" href="main.css"> 
   </head>
-  <body>
+  <body onclick="checkAnswers();">
     <h1>퀴즈</h1>
     <div id="quiz">
       <div id="question1">
@@ -125,8 +125,19 @@
       </div>
 
     </div>
-
     <script src="jquery.js"></script>
+    <script src="impress.js"></script>
+    <!-- atom needs this to run -->
+    <canvas></canvas>
+    <script src="atom.js"></script>
+    <script src="easel.js"></script>
+    <script src="melon.js"></script>
+    <script src="yabble.js"></script>
+    <script src="jquery.gamequery.js"></script>
+    <script src="jaws.js"></script>
+    <script src="enchant.js"></script>
+    <script src="crafty.js"></script>
     <script src="game.js"></script>
+    
   </body>
 </html>
